# photo-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  GOOGLE_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  verify_setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
photo_manager/: __init__.py  __main__.py  cli.py
photo_manager/api/: __init__.py  client.py
photo_manager/auth/: __init__.py  google_auth.py
photo_manager/config/: __init__.py  settings.py
photo_manager/processors/: __init__.py  duplicate_finder.py  heic_processor.py  image_optimizer.py
photo_manager/utils/: __init__.py  file_utils.py  logging_utils.py
tests/: __init__.py  test_config.py
